--- a/web/assets/styles/padrao.css
+++ b/web/assets/styles/padrao.css
@@ -1,9 +1,13 @@
 h1, h2, h3, h4, h5 {
-    font-family: 'Archivo Narrow', sans-serif;
+	font-family: 'Oswald', sans-serif;
 }
 
 p, button, input, label, body, a, span {
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Open Sans Condensed', sans-serif;
+}
+
+input, textarea, button, select {
+	font-family: 'Quicksand', sans-serif;
 }
 
 .titulo {
