✅ padronização do css do formulário

--- a/web/pages/login/styles.css
+++ b/web/pages/login/styles.css
@@ -1,5 +1,4 @@
 /* msg */
-
 .msg {
 	margin-left: 12.5%!important;
 	margin-bottom: 60px;
@@ -14,43 +13,29 @@
 }
 
 /* form */
+form {
+    color: #f4f4f4;
+    padding: 0;
+    background: transparent;
+    width: 100%;
+    box-shadow: none;
+}
+
 form fieldset {
 	border: none;
 	padding: 0;
-	margin: 20px 0;
+	margin: 10px 0;
 	position: relative; 
+    text-align: left;
 }
 
 form fieldset input {
 	width: 100%;
 	height: 65px;
-	background: #e1e5f22c;
-    border-radius: 8px;
-    border: 0;
-    padding: 12px 24px;
-	color: #f4f4f4;
 }
-  
+ 
 form button {
 	width: 100%;
-	height: 65px;
-	border-radius: 8px;
-	outline: none!important;
-	background: linear-gradient(43deg, 
-		rgba(182,95,173,1) 0%, 
-		rgba(182,95,135,1) 14%, 
-		rgba(191,66,89,1) 36%, 
-		rgba(158,11,26,1) 71%, 
-		rgba(226,130,12,1) 96%);
-	border: none;
-	cursor: pointer;
-	color: #f4f4f4;
-	transition: all 0.4s;
-}
-
-form button:hover {
-	filter: brightness(150%);
-	box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.493);
 }
   
 /* line */
