--- a/web/pages/empresas/stylePopup.css
+++ b/web/pages/empresas/stylePopup.css
@@ -73,55 +73,9 @@ transform: rotate(45deg);
 background-color: rgba(158,11,26,1);
 }
 
-.modalDialog form fieldset {
-	border: none;
-	padding: 0;
-	margin: 20px 0;
-	position: relative; 
-}
-
-.modalDialog form fieldset input {
-	width: 100%;
-	height: 65px;
-	background: #6b6b6b2c;
-    border-radius: 8px;
-    border: 0;
-    padding: 12px 24px;
-	color: #f4f4f4;
-}
-
-.modalDialog form button {
-    width: 150px;
-	margin-top: 15px;
-	height: 65px;
-	border-radius: 8px;
-	outline: none!important;
-	background: linear-gradient(43deg, 
-		rgba(182,95,173,1) 0%, 
-		rgba(182,95,135,1) 14%, 
-		rgba(191,66,89,1) 36%, 
-		rgba(158,11,26,1) 71%, 
-		rgba(226,130,12,1) 96%);
-	border: none;
-	cursor: pointer;
-	color: #f4f4f4;
-	transition: all 0.4s;
-}
-
-.modalDialog form button:hover {
-	filter: brightness(150%);
-	box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.493);
-}
-
-.modalDialog form button:first-child {
-	height: 65px;
-	border-radius: 8px;
-	outline: none!important;
-	background: none;
-	border: 1px solid rgba(226,130,12,1);
-	cursor: pointer;
-	color: #333;
-	transition: all 0.4s;
+.modalDialog form {
+  background: transparent;
+  box-shadow: none;
 }
 
 .modalDialog form .btn {
