💥 login e correção de css

--- a/web/assets/styles/formStyle.css
+++ b/web/assets/styles/formStyle.css
@@ -23,7 +23,7 @@ form fieldset input {
     border-radius: 8px;
     border: 0;
     padding: 12px 24px;
-	color: #333;
+	color: #f4f4f4;
   margin-top: 5px
 }
 
