--- a/web/assets/styles/padrao.css
+++ b/web/assets/styles/padrao.css
@@ -2,23 +2,13 @@ h1, h2, h3, h4, h5 {
 	font-family: 'Oswald', sans-serif;
 }
 
-p, button, input, label, body, a, span {
-    font-family: 'Open Sans Condensed', sans-serif;
-}
-
-input, textarea, button, select {
+p, button, input, label, body, a, span, input, textarea, button, select {
 	font-family: 'Quicksand', sans-serif;
 }
 
 .titulo {
     text-align: left;
     padding: 30px;
-}
-
-header img {
-    margin-top: 20px;
-    width: 80px;
-    margin-left: 90%;
 }
 
 body {
