--- a/web/pages/login/styles.css
+++ b/web/pages/login/styles.css
@@ -5,11 +5,12 @@
 }
 
 .msg h1 {
-	font-size: 65px;
+	font-size: 45px;
+	margin-bottom: 0px;
 }
 
 .msg p {
-	font-size: 24px;
+	font-size: 18px;
 }
 
 /* form */
