🎀Listagem e demais interações com empresa

--- a/web/pages/empresas/stylePopup.css
+++ b/web/pages/empresas/stylePopup.css
@@ -12,6 +12,10 @@
     color: #333;
   }
 
+  .modalDialog form input {
+    color: #333;
+  }
+
   .modalDialog:target {
     opacity: 1;
     pointer-events: auto;
@@ -20,7 +24,7 @@
   .modalDialog > div {
     width: 500px;
     position: relative;
-    margin: 10% auto;
+    margin: 5% auto;
     padding: 5px 20px 13px 20px;
     border-radius: 10px;
     background: #f4f4f4;
