--- a/web/pages/empresas/styles.css
+++ b/web/pages/empresas/styles.css
@@ -152,3 +152,9 @@
 	filter: brightness(150%);
 	box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.493);
 }
+
+.btnSelecionar {
+	padding: 0;
+    background: none;
+    width: auto;
+}
