--- a/web/pages/etapas/styles.css
+++ b/web/pages/etapas/styles.css
@@ -39,15 +39,14 @@
     margin-top: -20px;
 }
 
-
 /* checklist */
 #checklist {
-    width: 100px;
+    width: 100%;
     min-height: 140px;
     position: relative;
-    padding: 30px 45px;
+    padding: 30px 45px 10px 0px;
     display: grid;
-    grid-template-columns: 30px auto;
+    grid-template-columns: 30px 100px;
     align-items: center;
 }
 
@@ -56,7 +55,7 @@
     cursor: pointer;
     display: grid;
     align-items: center;
-    width: fit-content;
+    width: inherit;
     transition: color 0.3s ease;
 }
 
@@ -68,7 +67,6 @@
 #checklist label::before {
     height: 2px;
     width: 8px;
-    left: -27px;
     background: #e2820c;
     border-radius: 2px;
     transition: background 0.3s ease;
@@ -81,7 +79,6 @@
     width: 15px;
     outline: none;
     border: 0;
-    margin: 0 15px 0 0;
     cursor: pointer;
     display: grid;
     align-items: center;
@@ -130,7 +127,18 @@
     animation: firework 0.5s ease forwards 0.1s;
 }
 
-  
+#checklist .pri {
+  font-size: 20px;
+}
+
+#checklist .sec {
+  margin-left: 40px;
+}
+
+#checklist .ter {
+  margin-left: 80px;
+}
+
 @keyframes move {
     50% {
       padding-left: 8px;
