--- a/web/pages/etapas/styles.css
+++ b/web/pages/etapas/styles.css
@@ -42,13 +42,24 @@
 /* checklist */
 #checklist {
     width: 100%;
-    min-height: 140px;
     position: relative;
-    padding: 30px 45px 10px 0px;
+    padding: 5px 45px 5px 0px;
     display: grid;
-    grid-template-columns: 30px auto;
+    grid-template-columns: 30px 450px 250px 170px 20px 170px 30px;
     align-items: center;
+    grid-template-rows: max-content;
 }
+
+#checklist input[type='date'] {
+	width: 100%;
+	height: 40px;
+	background: #6b6b6b2c;
+  border-radius: 8px;
+  border: 0;
+  padding: 12px 24px;
+	color: #f4f4f4;
+}
+
 
 #checklist label {
     position: relative;
@@ -57,6 +68,11 @@
     align-items: center;
     width: inherit;
     transition: color 0.3s ease;
+    grid-template-columns: auto auto;
+    text-align: left;
+    padding: 0 20px;
+    width: fit-content;
+    margin-right: auto;
 }
 
 #checklist label::before, #checklist label::after {
@@ -133,15 +149,49 @@
 
 #checklist .sec {
   margin-left: 40px;
-  grid-template-columns: auto auto;
-  text-align: left;
-  padding: 0 20px;
-  width: fit-content;
-  margin-right: auto;
 }
 
-#checklist .ter {
-  margin-left: 80px;
+#checklist .collapse {
+  height: 0px;
+  overflow: hidden;
+  background: #3c3c3c;
+  padding: 0px;
+  border-radius: 0px 0px 30px 30px;
+  transition: height 0.8s;
+  width: max-content;
+  display: grid;
+  grid-template-columns: 30px 450px 250px 170px 20px 170px;;
+
+}
+
+#checklist .collapse label {
+  margin-top: -30px;
+}
+
+#checklist  button {
+  width: 40px;
+  margin-left: 15px;
+  height: 40px;
+  border-radius: 8px;
+  outline: none!important;
+  cursor: pointer;
+  transition: all 0.4s;
+}
+
+
+#checklist button:hover {
+	filter: brightness(150%);
+	box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.493);
+}
+#checklist .btnPrincipal {
+  background: linear-gradient(43deg, 
+      rgba(182,95,173,1) 0%, 
+      rgba(182,95,135,1) 14%, 
+      rgba(191,66,89,1) 36%, 
+      rgba(158,11,26,1) 71%, 
+      rgba(226,130,12,1) 96%);
+  border: none;
+  color: #f4f4f4;
 }
 
 @keyframes move {
