--- a/web/pages/etapas/styles.css
+++ b/web/pages/etapas/styles.css
@@ -56,7 +56,7 @@
     position: relative;
     padding: 5px 45px 5px 0px;
     display: grid;
-    grid-template-columns: 30px 450px 250px 170px 20px 170px 30px;
+    grid-template-columns: 30px 450px 250px 170px 20px 170px 60px 50px;
     align-items: center;
     grid-template-rows: max-content;
 }
@@ -70,7 +70,6 @@
   padding: 12px 24px;
 	color: #f4f4f4;
 }
-
 
 #checklist label {
     position: relative;
@@ -194,6 +193,7 @@
 	filter: brightness(150%);
 	box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.493);
 }
+
 #checklist .btnPrincipal {
   background: linear-gradient(43deg, 
       rgba(182,95,173,1) 0%, 
@@ -203,6 +203,10 @@
       rgba(226,130,12,1) 96%);
   border: none;
   color: #f4f4f4;
+}
+
+#checklist .close-container {
+  margin-top: 25px;
 }
 
 @keyframes move {
